# Linear-Coding-Agent-Harness

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  autonomous_agent_demo.py  client.py  docker-compose.yml  main.py  orchestrator.yaml  progress.py  prompts.py  pyproject.toml  requirements.txt  run_autonomous.py  run_harness.py  security.py  test_commands.py  test_phase_runner.py  test_state_machine.py
PRPs/plans/: AUTONOMOUS-AGENT-FRAMEWORK-BRAINSTORM.md  autonomous-orchestrator-framework.md  fix-enable-planning-phases.md
adapters/: __init__.py  api_adapter.py  base.py  cli_adapter.py
api/: __init__.py  main.py  schemas.py
api/routes/: __init__.py  health.py  projects.py
backends/: __init__.py  json_backend.py  linear_backend.py  postgres_backend.py
config/: __init__.py  loader.py  schema.py
database/: __init__.py  connection.py  models.py  repository.py
database/migrations/: env.py  init.sql
migration/alembic/: env.py
orchestrator/: __init__.py  aggregator.py  error_recovery.py  heartbeat.py  keyboard_handler.py  phase_runner.py  resume.py  shutdown.py  state_machine.py  swarm_controller.py
phases/: __init__.py  architecture.py  deploy.py  ideation.py  implement.py  initialize.py  task_breakdown.py  testing.py
prompts/architecture/: aggregate.md  data_models.md
prompts/deploy/: deploy.md
prompts/ideation/: aggregate.md  brainstorm.md  brainstorm_edge_cases.md
prompts/task_breakdown/: decompose.md
python/src/agents/: client.py  (+1 more)
python/tests/: test_commands.py  test_phase_runner.py  test_security.py  test_state_machine.py
(+42 files in other folders)
