[project]
name = "autonomous-orchestrator"
version = "0.1.0"
description = "Autonomous Orchestrator Framework for software development"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python/src"]

[tool.ruff.lint.isort]
known-first-party = ["server", "agents"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = [
    "claude_code_sdk.*",
    "asyncpg.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
